# snac-nox

./: .gitignore  .gitmodules  INSTALL  Makefile.am  README  boot.sh  configure.ac  setversion
src/: .gitignore  Make.vars  Makefile.am  nox_main.cc
src/builtin/: component.cc  deployer.cc  dso-deployer.cc  event-dispatcher-component.cc  kernel.cc  nox.cc
src/etc/: Makefile.am  dojo-build.profile.js  gen-nox-cert.sh  nox.xml
src/include/: Makefile.am  classifier.hh  cnode-result.hh  cnode.hh  datapath-join.hh  datapath-leave.hh  event.hh  expr.hh  flow-mod-event.hh  flow.hh  fnv_hash.hh  openflow-event.hh  openflow.hh  packet-in.hh  packets.h  port-stats-in.hh  port-status.hh  resolver.hh  shutdown-event.hh  ssl-socket.hh  switch-features.hh  tcp-socket.hh
src/include/netinet++/: cidr.hh  datapathid.hh  ethernet.hh  ethernetaddr.hh  vlan.hh
src/include/openflow/openflow/: nicira-ext.h
src/include/threads/: native-pool.hh
src/lib/: Makefile.am  async_io.cc  command-line.cc  expr.cc  flow.cc  leak-checker.cc  netlink.cc  openflow-event.cc  openflow.cc  resolver.cc  ssl-config.cc  ssl-socket.cc  string.cc  tcp-socket.cc  timeval.cc  vlog-log4cxx.cc  vlog-socket.cc  vlog.cc  xml-util.cc
src/lib/netinet++/: ethernetaddr.cc
src/lib/threads/: cooperative.cc  impl.cc  native.cc  signals.cc
src/nox/: .gitignore  Makefile.am  component.hh  deployer.hh  kernel.hh  nox.hh
src/nox/apps/: Makefile.am  README
src/nox/apps/authenticator/: Makefile.am  auth-event.cc  auth-event.hh  auth.i  authenticator-helper.cc  authenticator-names.cc  authenticator.cc  authenticator.hh  bcast-in.cc  bcast-in.hh  flow-in.cc  flow-in.hh  flow_fn_map.hh  flow_util.cc  flow_util.hh  flow_util.i  host-event.cc  host-event.hh  meta.xml  pyauth.cc  pyauth.hh  pyflow_util.cc  user-event.cc  user-event.hh
src/nox/apps/bcast_resolve/: Makefile.am  bcast-resolve.cc  bcast-resolve.hh  meta.xml
src/nox/apps/bindings_storage/: Makefile.am  bind_stuff_test.py  bindings_directory.py  bindings_storage.cc  bindings_storage.hh  bindings_storage_proxy.cc  bindings_storage_proxy.hh  bs_datastructures.i  meta.xml  py_bs_memleak_test.py  pybindings_storage.i  serial_op_queue.hh
src/nox/apps/configuration/: Makefile.am  configuration.cc  configuration.hh  csimple_config.hh  properties.py
src/nox/apps/coreui/: Makefile.am  authui.py  coreui.py  meta.xml  monitorsui.py  web_arg_utils.py  webservice.py  webserviceclient.py
src/nox/apps/coreui/static_www/coreui/: EditableGrid.css  EditableGridUtil.js  (+26 more)
src/nox/apps/default_switch_approval/: Makefile.am
src/nox/apps/directory/: Makefile.am  directorymanager.cc  directorymanager.hh  directorymanager.py  dirmanager.i  dm_ws_switch.py  netinfo_mod_event.cc  netinfo_mod_event.i  principal_types.hh  pydirmanager.cc
src/nox/apps/discovery/: Makefile.am  discovery.py  discoveryws.py  link-event.hh  link.i  meta.xml
src/nox/apps/examples/: Makefile.am  countdown.py  dnsspy.py  meta.xml  monitor.py  pyswitch.py
src/nox/apps/exit/: Makefile.am  exit.cc  meta.xml
src/nox/apps/flow_fetcher/: Makefile.am  flow_fetcher.cc  meta.xml  pyflow_fetcher.i  test.py
src/nox/apps/hub/: hub.cc
src/nox/apps/migration/: Makefile.am  example_plugin.py  migration.py
src/nox/apps/miscws/: Makefile.am  cpustats.py  meta.xml
src/nox/apps/noop/: Makefile.am  meta.xml  noop.cc
src/nox/apps/pyrt/: Makefile.am  __init__.py  component.i  componentws.py  context.i  deferredcallback.cc  deferredcallback.i  event.i  meta.xml  oxidereactor.cc  oxidereactor.hh  oxidereactor.i  pycomponent.cc  pycontext.cc  pycontext.hh  pyglue.cc  pyglue.hh  pyoxidereactor.py  pyrt.cc
src/nox/apps/routing/: Makefile.am  meta.xml  nat_enforcer.cc  nat_enforcer.hh  nat_enforcer.i  pynat_enforcer.cc  pyrouting.cc  routing.cc  routing.hh  routing.i  samplerouting.py  sprouting.cc  sprouting.hh
src/nox/apps/simple_c_app/: Makefile.am  simple_cc_app.cc
src/nox/apps/simple_c_py_app/: meta.xml  pysimple_cc_py_app.i  simple_cc_py_proxy.cc
src/nox/apps/storage/: Makefile.am  StorageTableUtil.py  dht-storage.cc  dht-storage.hh  pytransactional-storage.cc  sqlite3-impl.cc  sqlite3-impl.hh  storage.cc  storage.py  transactional_storage.py
src/nox/apps/storagews/: Makefile.am  base_storagews.py  meta.xml
src/nox/apps/switch/: switch.cc
src/nox/apps/switchconfig/: meta.xml  switchconfig.py
src/nox/apps/switchstats/: Makefile.am  cswitchstats.cc  cswitchstats.hh  cswitchstats_proxy.cc  meta.xml  pycswitchstats.i  switchstats.py
src/nox/apps/tests/: Makefile.am  file-server.cc  meta.xml  properties-test.cc  ssl-test.cc  tests.cc  unittest.py  user_event_log_test.cc
src/nox/apps/tests/pyunittests/: Makefile.am  bindings_storage_test.py  bs_link_test.py  bs_location_test.py  bs_portname_test.py  componentws_test.py  controller_test.py  dhcp_parse_test.py  directorymanager_test.py  dns_parse_test.py  eap_parse_test.py  ethernet_parse_test.py  event_test.py  icmp_parse_test.py  ipv4_parse_test.py  lldp_parse_test.py  mod_test.py  properties_test.py  routing_test.py  simple_async_test.py  storage_table_util_test.py  storage_test.py  storage_test_base.py  tcp_parse_test.py  transactional_storage_test.py  udp_parse_test.py  user_event_log_test.py  util_parse_test.py  vlan_parse_test.py  webservice_test.py
src/nox/apps/topology/: Makefile.am  meta.xml  pytopology.cc  pytopology.i  pytopology_test.py  topology.hh
src/nox/apps/user_event_log/: Makefile.am  log_entry.hh  meta.xml  networkeventsws.py  py_uel_memleak_test.py  pyuser_event_log.i  simple_uel_util.py  uel_memleak_test.cc  user_event_log.cc  user_event_log.hh  user_event_log_proxy.cc  user_event_log_proxy.hh  user_event_log_test2.cc
src/nox/lib/: common-defs.i  config.i  core.py  directory.py  directory_factory.py  nox-config.hh  token_bucket.py  util.py
src/nox/lib/netinet/: cidr.i  ethernetaddr.i
src/nox/lib/packet/: Makefile.am  oui.txt
src/scripts/: analytics.blip  releaser.sh  stagable.py
src/tests/: Makefile.am  test-classifier.hh
src/utilities/: Makefile.am  nox-monitor  start-test-vm  switch_command.py  vlog_config.cc
(+64 files in other folders)
